
    Remove the "parallel" depend stuff from the awk backend.

    Remove the "parallel" depend stuff from the help.

  26 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Removed the "parallel" depend for init scripts and related functions.
    The RC_PARALLEL_STARTUP works well for all - no need for init scripts to
    state if they parallel or not.

  25 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    If we do not have net services, check both boot and current runlevel for
    net services in trace_dependencies().  Sort services and make sure they
    are unique.

    Fix the adding of dependencies to properly add netservices as 'net'.

  25 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    trace_dependencies no longer clobbers the net service.

    RC_AUTO_INTERFACE no longer symlinks /etc/{resolv,ntp,yp}.conf when no.

  25 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    Do not restart dependencies on runlevel change if the service that needs
    them are in the next runlevel.

  22 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    When a service is stopped, the IN_BACKGROUND variable is cleared
    before any dependencies are stopped so they are not marked inactive.
    The IN_BACKGROUND variable is then restored so the parent script can be
    marked inactive.

  21 Jul 2005; Mike Frysinger <vapier@gentoo.org>:

    Change the -l option to tar to --one-file-system #99775.

    Add a --debug option to depscan.sh.

  21 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    Fix hangs in bootup, bug #99663.

  21 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    dhclient now sets the hostname correctly.

    Fixed some start/stop/restart logic for #99663.

    Stopped rc-status from checking failed and broken which no longer apply.

  20 Jul 2005; Mike Frysinger <vapier@gentoo.org>:

    Make sure the X11 dirs are always created in /tmp #99679 by Marc Ballarin.

  20 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Fixed <wpa_supplicant-0.4 support
